# Gmail_Agent

./: README.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  main.py  schemas.py
